@@ -1,3 +1,5 @@
+* #2910 Open popups in the current window (marco)
+
 61
 
 * Adopted to the latest actviity launch changes (erikos)
